<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etAnswer4"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:digits="TFtf"
        android:ems="10"
        android:hint="@string/hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLength="1"
        android:singleLine="true"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/a6"
        app:layout_constraintTop_toBottomOf="@+id/etAnswer3" />


    <EditText
        android:id="@+id/etAnswer3"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="43dp"
        android:digits="TFtf"
        android:ems="10"
        android:hint="@string/hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toEndOf="@+id/a8"
        app:layout_constraintTop_toBottomOf="@+id/etAnswer2" />

    <TextView
        android:id="@+id/a5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="66dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="30dp"
        android:text="@string/f"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/a7"
        app:layout_constraintEnd_toStartOf="@+id/a8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/a3" />

    <TextView
        android:id="@+id/a7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="66dp"
        android:layout_marginEnd="79dp"
        android:text="@string/f"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/a6"
        app:layout_constraintEnd_toStartOf="@+id/a6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/a6" />

    <TextView
        android:id="@+id/a2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="66dp"
        android:text="@string/f2"
        android:textSize="36sp"
        app:layout_constraintEnd_toStartOf="@+id/etAnswer2"
        app:layout_constraintStart_toEndOf="@+id/a3"
        app:layout_constraintTop_toBottomOf="@+id/a4" />

    <TextView
        android:id="@+id/a6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="165dp"
        android:layout_marginTop="30dp"
        android:text="F"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/a8" />

    <TextView
        android:id="@+id/a8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginTop="28dp"
        android:text="T"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/a2" />

    <TextView
        android:id="@+id/a4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="65dp"
        android:text="T"
        android:textSize="36sp"
        app:layout_constraintEnd_toStartOf="@+id/etAnswer1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/B" />

    <TextView
        android:id="@+id/t"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="7dp"
        android:text="@string/A"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/B"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/B"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="7dp"
        android:text="@string/B"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/AB"
        app:layout_constraintStart_toEndOf="@+id/t"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/A"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="76dp"
        android:text="@string/t1"
        android:textSize="36sp"
        app:layout_constraintEnd_toStartOf="@+id/a4"
        app:layout_constraintTop_toBottomOf="@+id/t" />

    <TextView
        android:id="@+id/a3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="66dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="76dp"
        android:text="T"
        android:textSize="36sp"
        app:layout_constraintEnd_toStartOf="@+id/a2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/A" />

    <TextView
        android:id="@+id/AB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="4dp"
        android:text="@string/AB"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/B"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Title"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAnswer4"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/etAnswer1"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="29dp"
        android:digits="TFt"
        android:ems="10"
        android:hint="@string/hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLength="1"
        android:singleLine="true"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/etAnswer2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/a4"
        app:layout_constraintTop_toBottomOf="@+id/AB" />

    <EditText
        android:id="@+id/etAnswer2"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="35dp"
        android:digits="TFtf"
        android:ems="10"
        android:hint="@string/hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLength="1"
        android:singleLine="true"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/a2"
        app:layout_constraintTop_toBottomOf="@+id/etAnswer1" />


</androidx.constraintlayout.widget.ConstraintLayout>